--- a/app/src/main/res/layout/activity_live_loc.xml
+++ b/app/src/main/res/layout/activity_live_loc.xml
@@ -17,13 +17,25 @@
             android:layout_width="fill_parent"
             android:layout_height="5dip"
             android:background="@drawable/dropshadow" ></View>
-
-        <fragment
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <fragment
             android:id="@+id/map_live"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             class="com.google.android.gms.maps.SupportMapFragment" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Refresh"
+                android:id="@+id/refresh"
+                android:layout_gravity="left|bottom" />
+        </FrameLayout>
+
+
 
     </LinearLayout>
 
